tests/compile-fail/panic3.rs
//error-pattern: the evaluated program panicked

fn main() {
    core::panic!("panicking from libcore");
}
